; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task_policy.c_trace_resource_violation.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task_policy.c_trace_resource_violation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ledger_entry_info = type { i32, i32, i32, i32 }

@DBG_MACH = common dso_local global i32 0, align 4
@DBG_MACH_RESOURCE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @trace_resource_violation(i32 %0, %struct.ledger_entry_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ledger_entry_info*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.ledger_entry_info* %1, %struct.ledger_entry_info** %4, align 8
  %5 = load i32, i32* @DBG_MACH, align 4
  %6 = load i32, i32* @DBG_MACH_RESOURCE, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @KDBG_CODE(i32 %5, i32 %6, i32 %7)
  %9 = load %struct.ledger_entry_info*, %struct.ledger_entry_info** %4, align 8
  %10 = getelementptr inbounds %struct.ledger_entry_info, %struct.ledger_entry_info* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.ledger_entry_info*, %struct.ledger_entry_info** %4, align 8
  %13 = getelementptr inbounds %struct.ledger_entry_info, %struct.ledger_entry_info* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.ledger_entry_info*, %struct.ledger_entry_info** %4, align 8
  %16 = getelementptr inbounds %struct.ledger_entry_info, %struct.ledger_entry_info* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.ledger_entry_info*, %struct.ledger_entry_info** %4, align 8
  %19 = getelementptr inbounds %struct.ledger_entry_info, %struct.ledger_entry_info* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @KERNEL_DBG_IST_SANE(i32 %8, i32 %11, i32 %14, i32 %17, i32 %20)
  ret void
}

declare dso_local i32 @KERNEL_DBG_IST_SANE(i32, i32, i32, i32, i32) #1

declare dso_local i32 @KDBG_CODE(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
